[package]
name = "disteam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
poise = "0.5.7"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
dotenvy = { version = "0.15.7", optional = true }
env_logger = { version = "0.10.1", optional = true }
log = { version = "0.4.20", optional = true }

[features]
# Read environment variables from the `.env` file
dotenv = ["dotenvy"]
# Output log
logger = ["env_logger", "log"]

# for development
dev = ["default", "dotenv"]
# for the ./Dockerfile
docker = ["logger"]
# default
default = ["logger"]
